# DevTrace

./: README.md
.github/workflows/: release.yml
backend/: .gitignore  package-lock.json  package.json
frontend/: package-lock.json
frontend/app/: page.tsx
logger/: .gitignore  Cargo.toml
logger/database/: database_example.db
logger/src/: main.rs
logger/src/api/: handler.rs  mod.rs  route.rs  router.rs  routes.rs  serializer.rs
logger/src/api/endpoints/: info.rs  ingest.rs  logs.rs  mod.rs
logger/src/database/: db_handler.rs  filters.rs  mod.rs
logger/src/handlers/: logs_handler.rs  mod.rs
logger/src/logger/: collector.rs  filter.rs  logger.rs  mod.rs  model.rs  store.rs
logger/src/middleware/: request_logger.rs
logger/src/models/: mod.rs  request.rs  request_log.rs  response.rs  response_log.rs
logger/src/proxy/: handler.rs  mod.rs  server.rs
logger/src/reload/: watcher.rs
logger/src/replayengine/: commands.rs
logger/src/utils/: mod.rs  query_parsers.rs
packger/go/: README.md  devtrace.go  go.mod
packger/go/cmd/devtrace/: main.go
packger/go/internal/installer/: installer.go
packger/npm/: README.md  cli.js  index.js  install.js  package.json
packger/python/: README.md  setup.py
packger/python/devtrace/: __init__.py  __main__.py  installer.py
runner/: .gitignore  Cargo.toml
runner/src/: main.rs
test/: playwright.config.ts
test/logger_test/: api.spec.ts
