[package]
name = "logger"
version = "0.1.0"
edition = "2021" 

[dependencies]
dotenvy = "0.15.7"
notify = "6.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4"
